# cindergrace-launcher

./: .gitignore  .pydocstyle  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.bat  start.sh
src/cindergrace_launcher/: __init__.py  __main__.py  cockpit.py  config.py  dialogs.py  i18n.py  main.py  process_manager.py  providers.py  sync.py
