[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cindergrace-launcher"
version = "1.1.0"
description = "Cindergrace Launcher - Cross-Platform GUI für Claude, Codex, Gemini und andere LLM CLIs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cindergrace Team", email = "dev@cindergrace.de"}
]
maintainers = [
    {name = "Cindergrace Team", email = "dev@cindergrace.de"}
]
keywords = [
    "llm",
    "ai",
    "cli",
    "launcher",
    "qt",
    "pyside6",
    "claude",
    "codex",
    "gemini",
    "project-manager",
    "terminal",
    "cross-platform"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "cryptography>=43.0.1",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/goettemar/cindergrace-launcher"
Repository = "https://github.com/goettemar/cindergrace-launcher"
Documentation = "https://github.com/goettemar/cindergrace-launcher#readme"
Issues = "https://github.com/goettemar/cindergrace-launcher/issues"

[project.scripts]
cindergrace-launcher = "cindergrace_launcher.main:main"

[project.gui-scripts]
cindergrace-launcher-gui = "cindergrace_launcher.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cindergrace_launcher = ["*.css", "*.png", "*.svg", "*.qss"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D200",  # One-line docstring should fit on one line
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at first line
    "D402",  # First line should not be function signature
]
match = "(?!test_).*\\.py"

[tool.coverage.run]
source = ["src/cindergrace_launcher"]
omit = [
    "src/cindergrace_launcher/ui/*",      # Qt UI nicht unit-testbar
    "src/cindergrace_launcher/dialogs.py", # Qt Dialoge
    "src/cindergrace_launcher/cockpit.py", # Qt Hauptfenster
    "src/cindergrace_launcher/main.py",    # Entry Point
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 60

[tool.radon]
cc_min = "D"  # Only report D/E/F complexity (C-grade acceptable for UI handlers)

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B404", "B603", "B607", "B110", "B112"]  # subprocess for terminal, try/except patterns

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
